# cloud-services

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-prod.yaml
docs/: datasets.md  deployment.md  getting_started.md  inference_export.md  training.md
export/: Dockerfile  README.md  app.py  cloudbuild.yaml  db.py  main.py  models.py  pyproject.toml  schema.py  storage.py  utils.py
inference/: Dockerfile  README.md  app.py  base.py  cloudbuild.dev.yaml  cloudbuild.yaml  evaluation.py  providers.py  pyproject.toml  schema.py  storage.py  utils.py
infrastructure/: Makefile  README.md  generate-diagram.py  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/api-config/: gemma-finetuner-api-v5.yaml
infrastructure/environments/: production.tfvars.example  staging.tfvars.example
infrastructure/modules/api_gateway/: api-config.yaml  main.tf  outputs.tf
infrastructure/modules/compute/: main.tf  outputs.tf
infrastructure/modules/core/: main.tf  outputs.tf
infrastructure/modules/firebase/: main.tf  outputs.tf
infrastructure/modules/storage/: main.tf  outputs.tf
jobs/export-job/: Dockerfile  README.md  cloudbuild.dev.yaml  cloudbuild.yaml  main.py  pyproject.toml  schema.py  storage.py  utils.py
jobs/training-job/: Dockerfile  README.md  base.py  cloudbuild.dev.yaml  cloudbuild.yaml  job_manager.py  main.py  providers.py  pyproject.toml  rewards.py  schema.py  storage.py  utils.py
preprocessing/: Dockerfile  README.md  app.py  cloudbuild.dev.yaml  cloudbuild.yaml  dataset_tracker.py  pyproject.toml  schema.py
preprocessing/augmentation/: augmentation_manager.py  eda.py  gemini_synthesizer.py
preprocessing/services/: config.yaml  dataaset_synthesizer.py  dataset_handler.py  dataset_loader.py  dataset_service.py  dataset_synthesizer.py  format_converter.py
preprocessing/services/parsers/: __init__.py  base.py  docx_parser.py  html_parser.py  pdf_parser.py  ppt_parser.py
preprocessing/services/synthetic_data_kit/: pyproject.toml
preprocessing/services/synthetic_data_kit/synthetic_data_kit/: config.yaml
preprocessing/services/synthetic_data_kit/synthetic_data_kit/core/: create.py  curate.py  ingest.py  save_as.py
preprocessing/services/synthetic_data_kit/synthetic_data_kit/models/: llm_client.py
preprocessing/services/synthetic_data_kit/synthetic_data_kit/parsers/: __init__.py
preprocessing/services/synthetic_data_kit/synthetic_data_kit/utils/: config.py
preprocessing/storage/: local_storage.py
training/: Dockerfile  README.md  app.py  cloudbuild.dev.yaml  cloudbuild.yaml  job_manager.py  pyproject.toml  schema.py
