[project]
name = "export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.3.0",
    "peft>=0.17.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "transformers[torch]>=4.56.0",
    "unsloth>=2025.8.10",
    "uvicorn>=0.35.0",
]
