[project]
name = "export-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.3.1",
    "huggingface-hub>=0.34.4",
    "peft>=0.17.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "transformers>=4.56.1",
    "unsloth>=2025.9.4",
]
